# sdd-adk-antigravity-starter

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  server.py  skills-lock.json  tools.yaml
.agents/rules/: project-context.md
.agents/skills/mcp-toolbox-postgres/: SKILL.md
.agents/skills/repo-research/: SKILL.md
.agents/workflows/: speckit.plan.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
restaurant_concierge/: agent.py  database.py  models.py  reservations.py
scripts/: seed_db.py  setup_database.sh
specs/001-table-reservation-api/: data-model.md  database.py  models.py  plan.md  quickstart.md  research.md  reservations.py  server.py  spec.md  tasks.md  test_reservations.py
specs/001-table-reservation-api/checklists/: requirements.md
specs/001-table-reservation-api/contracts/: openapi.json
specs/002-cloudrun-deploy-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cloudrun-deploy-pipeline/checklists/: requirements.md
specs/002-cloudrun-deploy-pipeline/contracts/: openapi.json
tests/: conftest.py  test_reservations.py
