[project]
name = "sdd-adk-agents-agy"
version = "0.1.0"
description = "Restaurant Concierge — ADK Agent with SDD Workflows"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.7.0",
    "asyncpg>=0.29.0",
    "cloud-sql-python-connector[pg8000]>=1.0.0",
    "google-adk>=1.0.0",
    "toolbox-core>=1.0.0",
    "google-genai>=1.0.0",
    "pytest>=9.0.3",
    "httpx>=0.28.1",
]
